# discord-telegram-voice-notify

./: .env.example  .gitignore  .tool-versions  Dockerfile  config.json  main.py  pyproject.toml
bot/: config_models.py  discord_client.py  main.py  telegram_client.py
src/bot/: discord_client.py  main.py  telegram_client.py
